--- a/links.html
+++ b/links.html
@@ -9,8 +9,8 @@
     <script async src="https://use.fontawesome.com/d758daec41.js"></script>   
 	<link rel="stylesheet" href="css/style.css"/>
     
-    <meta name="description" content="anishapo личное яштокролик ноэтонеточно">
-    <meta name="keywords" content="anishapo личное яштокролик ноэтонеточно" />
+    <meta name="description" content="anishapo личное celery">
+    <meta name="keywords" content="anishapo личное celery" />
     
     <link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="img/favicon/apple-icon-60x60.png">
@@ -39,7 +39,7 @@
     <meta property="og:image:width" content="150"/>
     <meta property="og:image:height" content="150"/>
     <meta property="og:title" content="Сок Сельдерея Здоровье Печени" />
-    <meta property="og:description" content="anishapo личное яштокролик ноэтонеточно" />
+    <meta property="og:description" content="anishapo личное celery" />
     <meta property="og:locale" content="Ru-ru" />
     <meta property="og:site_name" content="anishapo_nutrition" />
 
@@ -64,7 +64,7 @@
 				<div class="header__wrap">
 					<div class="header__left">
 						<a href="./" class="header__logo">
-							<div class="header__logo-pic"><img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/65548526_845758652471166_759256901178359808_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_ohc=l7uqkmakUogAX-iRHXw&oh=309a04b3cf35067e5f2fc42a75128319&oe=5ECC9F56" alt="Сок Сельдерея Здоровье Печени"></div>
+							<div class="header__logo-pic"><img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/65548526_845758652471166_759256901178359808_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_ohc=bdAqINRgf3UAX8EssxY&oh=52c292acf0b9fe46cc8f0084238218a8&oe=5ECC9F56" alt="Сок Сельдерея Здоровье Печени"></div>
 							<div class="header__logo-txt">anishapo_nutrition</div>
 						</a>
 						<div class="header__title">Сок Сельдерея Здоровье Печени</div>
@@ -84,6 +84,14 @@
 					<div class="stories__slider" id="js-stories-slider">
 						<div class="swiper-wrapper">
 							<div class="swiper-slide">
+								<div class="stories__slide" title="Последнее">
+									<a href="index.html">
+										<div class="stories__slide-pic" style="background-image: url(./img/og/Poslednee.png);"></div>
+										<div class="stories__slide-txt" style="">Последнее</div>
+									</a>
+								</div>
+							</div>
+							<div class="swiper-slide">
 								<div class="stories__slide" title="anishapo личное">
 									<a href="./tags/./anishapo-lichnoe.html">
 										<div class="stories__slide-pic" style="background-image: url(./img/og/anishapo-lichnoe.png);"></div>
@@ -92,18 +100,10 @@
 								</div>
 							</div>
 							<div class="swiper-slide">
-								<div class="stories__slide" title="яштокролик">
-									<a href="./tags/./yashtokrolik.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/yashtokrolik.png);"></div>
-										<div class="stories__slide-txt" style="">яштокролик</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="ноэтонеточно">
-									<a href="./tags/./noetonetochno.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/noetonetochno.png);"></div>
-										<div class="stories__slide-txt" style="">ноэтонеточно</div>
+								<div class="stories__slide" title="anishapo celery">
+									<a href="./tags/./anishapo-celery.html">
+										<div class="stories__slide-pic" style="background-image: url(./img/og/anishapo-celery.png);"></div>
+										<div class="stories__slide-txt" style="">anishapo celery</div>
 									</a>
 								</div>
 							</div>
@@ -140,52 +140,22 @@
 						<div class="container">
 							<h2 class="links-page-title">ПОПУЛЯРНЫЕ</h2>
 							<div class="article-more__list">
-								<a href="./posts/./moya-istoriyaxxxxx-7.html" class="article-more__item">
-									<div class="article-more__item-pic">
-										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1454</span>
-										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82049816_850909225352594_1789752383054729929_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=102&_nc_ohc=8ep2y_xDNgUAX-nUDJx&oh=30fd05cb9b8748678fda71a207ccc8f4&oe=5ED39CD3" alt="МОЯ ИСТОРИЯ ❤️🌱">
-									</div>
-									<div class="article-more__item-name" style="
-">МОЯ ИСТОРИЯ ❤️🌱</div>
-								</a>
-								<a href="./posts/./moya-istoriyaxxxxx-6.html" class="article-more__item">
-									<div class="article-more__item-pic">
-										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1317</span>
-										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/81843854_1102883926772370_3020991578515235454_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=106&_nc_ohc=5qkrlMS3SbgAX8nP1yg&oh=9bd64ca3b59f76480e96b6858f45fa67&oe=5ECC12D2" alt="МОЯ ИСТОРИЯ ❤️🌱">
-									</div>
-									<div class="article-more__item-name" style="
-">МОЯ ИСТОРИЯ ❤️🌱</div>
-								</a>
-								<a href="./posts/./moya-istoriyaxxxxx-3.html" class="article-more__item">
-									<div class="article-more__item-pic">
-										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1291</span>
-										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82387033_192369958634428_844623154663314913_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=zC8E91ggBs0AX8Tks5O&oh=93d113a37af36648b6ec0f05bf478e65&oe=5EC595B2" alt="МОЯ ИСТОРИЯ ❤️🌱">
-									</div>
-									<div class="article-more__item-name" style="
-">МОЯ ИСТОРИЯ ❤️🌱</div>
-								</a>
 								<a href="./posts/./moya-istoriyaxxxxx-5.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1263</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1334</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83883802_578192936095585_7230772308895580877_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=Dw5Jb_CeaIcAX9Tvzj9&oh=7b5a39641b2406494f71bfbf0a95cedc&oe=5ED90323" alt="МОЯ ИСТОРИЯ ❤️🌱">
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82387033_192369958634428_844623154663314913_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=DAGX3GKwAg8AX9egCSd&oh=9dfdeb07116f7f00922ef94ef20ebcfe&oe=5EC595B2" alt="МОЯ ИСТОРИЯ ❤️🌱">
 									</div>
 									<div class="article-more__item-name" style="
 ">МОЯ ИСТОРИЯ ❤️🌱</div>
 								</a>
-								<a href="./posts/./moya-istoriyaxxxxx-2.html" class="article-more__item">
+								<a href="./posts/./moya-istoriyaxxxxx-7.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1204</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1307</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84479771_492275551473563_593260692510337045_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=75luDX5KvfwAX82y0QG&oh=dd71ae06fa7cfca2815b67c42dab8558&oe=5ECF2ABD" alt="МОЯ ИСТОРИЯ ❤️🌱">
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83883802_578192936095585_7230772308895580877_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=Ot0uKzs5JPwAX9pVG44&oh=6a7a4ac66e317153e9d0d62ab45651c2&oe=5ED90323" alt="МОЯ ИСТОРИЯ ❤️🌱">
 									</div>
 									<div class="article-more__item-name" style="
 ">МОЯ ИСТОРИЯ ❤️🌱</div>
@@ -193,32 +163,62 @@
 								<a href="./posts/./moya-istoriyaxxxxx-4.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1172</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1255</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83635925_126519612200644_455381365454284509_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=1GailRYU7WkAX9Rwk-B&oh=fe3df2739ce54af7ad38aae221335ed7&oe=5ECA244D" alt="МОЯ ИСТОРИЯ ❤️🌱">
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84479771_492275551473563_593260692510337045_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=shsJlsne1LwAX_kftdB&oh=3b0253cf72751bb46e33d1da78b1795b&oe=5ECF2ABD" alt="МОЯ ИСТОРИЯ ❤️🌱">
 									</div>
 									<div class="article-more__item-name" style="
 ">МОЯ ИСТОРИЯ ❤️🌱</div>
 								</a>
-								<a href="./posts/./moya-istoriya-xxxx-1.html" class="article-more__item">
+								<a href="./posts/./3-sostavlyayushchie-antivirusnogo-pitaniyaxxxxx.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1143</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1238</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/81869016_824576834678200_5282877511966683207_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=akWHew09cVAAX9lBaRk&oh=03299e10314eeadf2e4ee36066bb36f9&oe=5EC17073" alt="МОЯ ИСТОРИЯ ❤️🌱">
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83945124_616005175856295_8179209082800195144_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=E2d9OE57aXMAX-aV9U1&oh=888d503d71a2a00ca71c835d1edd92a2&oe=5EB96CF0" alt="3 СОСТАВЛЯЮЩИЕ АНТИВИРУСНОГО ПИТАНИЯ 🌟😎">
 									</div>
 									<div class="article-more__item-name" style="
-">МОЯ ИСТОРИЯ ❤️🌱</div>
+">3 СОСТАВЛЯЮЩИЕ АНТИВИРУСНОГО ПИТАНИЯ 🌟😎</div>
+								</a>
+								<a href="./posts/./moya-istoriyaxxxxx-3.html" class="article-more__item">
+									<div class="article-more__item-pic">
+										<div class="article-more__item-pic-blind">
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1210</span>
+										</div>
+										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83973399_2769495349805057_2802406441781033650_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=tEH6Rm7GKfoAX9NwL3y&oh=f39882bc4dcf7aadf4d09003fa6e940c&oe=5ECFF794" alt="МОЯ ИСТОРИЯ ❤️🌱">
+									</div>
+									<div class="article-more__item-name" style="
+">МОЯ ИСТОРИЯ ❤️🌱</div>
+								</a>
+								<a href="./posts/./moya-istoriyaxxxxx-6.html" class="article-more__item">
+									<div class="article-more__item-pic">
+										<div class="article-more__item-pic-blind">
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1210</span>
+										</div>
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83635925_126519612200644_455381365454284509_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=sFeVORxug_wAX-OpEmI&oh=f46bb520d132cc666b5d1751cb9c93ff&oe=5ECA244D" alt="МОЯ ИСТОРИЯ ❤️🌱">
+									</div>
+									<div class="article-more__item-name" style="
+">МОЯ ИСТОРИЯ ❤️🌱</div>
 								</a>
 								<a href="./posts/./moya-istoriya-xxxx.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1084</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1164</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83895606_170136797582758_1380565600953447473_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&_nc_ohc=AuD_RIG8ANsAX8Qob1e&oh=61f8d63e105845f37b81ba6a29979f24&oe=5EC45AEC" alt="МОЯ ИСТОРИЯ ❤️🌱">
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83895606_170136797582758_1380565600953447473_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&_nc_ohc=D-DvG7wqpa0AX-M038A&oh=a9202f62e877bf4d5f33f032d09fa8ce&oe=5EC45AEC" alt="МОЯ ИСТОРИЯ ❤️🌱">
 									</div>
 									<div class="article-more__item-name" style="
 ">МОЯ ИСТОРИЯ ❤️🌱</div>
+								</a>
+								<a href="./posts/./chto-zhe-bylo-s-moey-kozhey.html" class="article-more__item">
+									<div class="article-more__item-pic">
+										<div class="article-more__item-pic-blind">
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1155</span>
+										</div>
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82894121_180660543025179_420947889386109084_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=Haf1meGe9oYAX-RgnFV&oh=8d13ea894196d4eda6f7bfaadaed5aef&oe=5ED5E2D8" alt="ЧТО ЖЕ БЫЛО С МОЕЙ КОЖЕЙ?">
+									</div>
+									<div class="article-more__item-name" style="
+">ЧТО ЖЕ БЫЛО С МОЕЙ КОЖЕЙ?</div>
 								</a>
 							</div>
 						</div>
