--- a/error.html
+++ b/error.html
@@ -45,7 +45,7 @@
 				<div class="header__wrap">
 					<div class="header__left">
 						<a href="./main.html" class="header__logo">
-							<div class="header__logo-pic"><img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/65548526_845758652471166_759256901178359808_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_ohc=l7uqkmakUogAX-iRHXw&oh=309a04b3cf35067e5f2fc42a75128319&oe=5ECC9F56" alt="Сок Сельдерея Здоровье Печени"></div>
+							<div class="header__logo-pic"><img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/65548526_845758652471166_759256901178359808_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_ohc=nk9FJKWrSFcAX82h044&oh=e5330b0bc765121da8371f43e8713ff6&oe=5ECC9F56" alt="Сок Сельдерея Здоровье Печени"></div>
 							<div class="header__logo-txt">anishapo_nutrition</div>
 						</a>
 						<div class="header__title">Сок Сельдерея Здоровье Печени</div>
@@ -83,77 +83,77 @@
 				<div class="container">
 					<h2 class="article-more__title">ПОПУЛЯРНЫЕ</h2>
 					<div class="article-more__list">
-							<a href="./posts/./moya-istoriyaxxxxx-7.html" class="article-more__item">
+							<a href="./posts/./3-sostavlyayushchie-antivirusnogo-pitaniyaxxxxx.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1454</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1732</span>
 								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82049816_850909225352594_1789752383054729929_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=102&_nc_ohc=8ep2y_xDNgUAX-nUDJx&oh=30fd05cb9b8748678fda71a207ccc8f4&oe=5ED39CD3" alt="МОЯ ИСТОРИЯ ❤️🌱">
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83945124_616005175856295_8179209082800195144_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=kbKUcSvIMcIAX-FmRTk&oh=791a948e48849f2771f5c2d3639d9ae6&oe=5EB96CF0" alt="3 СОСТАВЛЯЮЩИЕ АНТИВИРУСНОГО ПИТАНИЯ 🌟😎">
 							</div>
-							<div class="article-more__item-name">МОЯ ИСТОРИЯ ❤️🌱</div>
-						</a>
-							<a href="./posts/./moya-istoriyaxxxxx-6.html" class="article-more__item">
-							<div class="article-more__item-pic">
-								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1317</span>
-								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/81843854_1102883926772370_3020991578515235454_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=106&_nc_ohc=5qkrlMS3SbgAX8nP1yg&oh=9bd64ca3b59f76480e96b6858f45fa67&oe=5ECC12D2" alt="МОЯ ИСТОРИЯ ❤️🌱">
-							</div>
-							<div class="article-more__item-name">МОЯ ИСТОРИЯ ❤️🌱</div>
-						</a>
-							<a href="./posts/./moya-istoriyaxxxxx-3.html" class="article-more__item">
-							<div class="article-more__item-pic">
-								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1291</span>
-								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82387033_192369958634428_844623154663314913_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=zC8E91ggBs0AX8Tks5O&oh=93d113a37af36648b6ec0f05bf478e65&oe=5EC595B2" alt="МОЯ ИСТОРИЯ ❤️🌱">
-							</div>
-							<div class="article-more__item-name">МОЯ ИСТОРИЯ ❤️🌱</div>
+							<div class="article-more__item-name">3 СОСТАВЛЯЮЩИЕ АНТИВИРУСНОГО ПИТАНИЯ 🌟😎</div>
 						</a>
 							<a href="./posts/./moya-istoriyaxxxxx-5.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1263</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1343</span>
 								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83883802_578192936095585_7230772308895580877_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=Dw5Jb_CeaIcAX9Tvzj9&oh=7b5a39641b2406494f71bfbf0a95cedc&oe=5ED90323" alt="МОЯ ИСТОРИЯ ❤️🌱">
-							</div>
-							<div class="article-more__item-name">МОЯ ИСТОРИЯ ❤️🌱</div>
-						</a>
-							<a href="./posts/./moya-istoriyaxxxxx-2.html" class="article-more__item">
-							<div class="article-more__item-pic">
-								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1204</span>
-								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84479771_492275551473563_593260692510337045_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=75luDX5KvfwAX82y0QG&oh=dd71ae06fa7cfca2815b67c42dab8558&oe=5ECF2ABD" alt="МОЯ ИСТОРИЯ ❤️🌱">
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82387033_192369958634428_844623154663314913_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=zWy9C4IdlMoAX8Z1Oig&oh=7cc414fa43a76fe7a6701ae13ef2bbb9&oe=5EC595B2" alt="МОЯ ИСТОРИЯ ❤️🌱">
 							</div>
 							<div class="article-more__item-name">МОЯ ИСТОРИЯ ❤️🌱</div>
 						</a>
 							<a href="./posts/./moya-istoriyaxxxxx-4.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1172</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1268</span>
 								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83635925_126519612200644_455381365454284509_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=1GailRYU7WkAX9Rwk-B&oh=fe3df2739ce54af7ad38aae221335ed7&oe=5ECA244D" alt="МОЯ ИСТОРИЯ ❤️🌱">
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84479771_492275551473563_593260692510337045_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=ux4OUB9bJKkAX8paO4O&oh=3d095c144d04db7fb09ce2cfca7b959a&oe=5ECF2ABD" alt="МОЯ ИСТОРИЯ ❤️🌱">
 							</div>
 							<div class="article-more__item-name">МОЯ ИСТОРИЯ ❤️🌱</div>
 						</a>
-							<a href="./posts/./moya-istoriya-xxxx-1.html" class="article-more__item">
+							<a href="./posts/./moya-istoriyaxxxxx-3.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1143</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1232</span>
 								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/81869016_824576834678200_5282877511966683207_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=akWHew09cVAAX9lBaRk&oh=03299e10314eeadf2e4ee36066bb36f9&oe=5EC17073" alt="МОЯ ИСТОРИЯ ❤️🌱">
+								<img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83973399_2769495349805057_2802406441781033650_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=tn5Bv9WExS8AX-TDQ-w&oh=09a544419c5e1548ca1fef1a9c9079d4&oe=5ECFF794" alt="МОЯ ИСТОРИЯ ❤️🌱">
 							</div>
-							<div class="article-more__item-name">МОЯ ИСТОРИЯ ❤️🌱</div>
+							<div class="article-more__item-name">МОЯ ИСТОРИЯ ❤️🌱</div>
+						</a>
+							<a href="./posts/./chto-zhe-bylo-s-moey-kozhey.html" class="article-more__item">
+							<div class="article-more__item-pic">
+								<div class="article-more__item-pic-blind">
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1212</span>
+								</div>
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82894121_180660543025179_420947889386109084_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=Haf1meGe9oYAX-RgnFV&oh=8d13ea894196d4eda6f7bfaadaed5aef&oe=5ED5E2D8" alt="ЧТО ЖЕ БЫЛО С МОЕЙ КОЖЕЙ?">
+							</div>
+							<div class="article-more__item-name">ЧТО ЖЕ БЫЛО С МОЕЙ КОЖЕЙ?</div>
 						</a>
 							<a href="./posts/./moya-istoriya-xxxx.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1084</span>
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1178</span>
 								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83895606_170136797582758_1380565600953447473_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&_nc_ohc=AuD_RIG8ANsAX8Qob1e&oh=61f8d63e105845f37b81ba6a29979f24&oe=5EC45AEC" alt="МОЯ ИСТОРИЯ ❤️🌱">
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83895606_170136797582758_1380565600953447473_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&_nc_ohc=D-DvG7wqpa0AX-M038A&oh=a9202f62e877bf4d5f33f032d09fa8ce&oe=5EC45AEC" alt="МОЯ ИСТОРИЯ ❤️🌱">
 							</div>
 							<div class="article-more__item-name">МОЯ ИСТОРИЯ ❤️🌱</div>
+						</a>
+							<a href="./posts/./moya-istoriyaxxxxx.html" class="article-more__item">
+							<div class="article-more__item-pic">
+								<div class="article-more__item-pic-blind">
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1151</span>
+								</div>
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82894115_492068188178295_8586066112610881889_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=FtQU3qV8n-4AX8_eg-J&oh=bedab2e6b89a677b0849baf91f40fc57&oe=5EC543D7" alt="МОЯ ИСТОРИЯ ❤️🌱">
+							</div>
+							<div class="article-more__item-name">МОЯ ИСТОРИЯ ❤️🌱</div>
+						</a>
+							<a href="./posts/./kak-podnyat--vitamin-d.html" class="article-more__item">
+							<div class="article-more__item-pic">
+								<div class="article-more__item-pic-blind">
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1150</span>
+								</div>
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83717774_471281957085239_4997457921501008778_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=UWMD3fxPyw0AX_pXmtq&oh=6f87f8f2e38e068695b0da9e5a496159&oe=5ED53384" alt="КАК ПОДНЯТЬ ВИТАМИН Д?">
+							</div>
+							<div class="article-more__item-name">КАК ПОДНЯТЬ ВИТАМИН Д?</div>
 						</a>
 						</div>
 				</div>
