--- a/links.html
+++ b/links.html
@@ -64,7 +64,7 @@
 				<div class="header__wrap">
 					<div class="header__left">
 						<a href="./" class="header__logo">
-							<div class="header__logo-pic"><img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/65548526_845758652471166_759256901178359808_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_ohc=nk9FJKWrSFcAX82h044&oh=e5330b0bc765121da8371f43e8713ff6&oe=5ECC9F56" alt="Сок Сельдерея Здоровье Печени"></div>
+							<div class="header__logo-pic"><img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/65548526_845758652471166_759256901178359808_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_ohc=-9XmDHU8CkwAX-PtCw2&oh=2c48e795c3d60a720170266f03a35e8e&oe=5ECC9F56" alt="Сок Сельдерея Здоровье Печени"></div>
 							<div class="header__logo-txt">anishapo_nutrition</div>
 						</a>
 						<div class="header__title">Сок Сельдерея Здоровье Печени</div>
@@ -83,14 +83,6 @@
 				<div class="stories__slider-wrap">
 					<div class="stories__slider" id="js-stories-slider">
 						<div class="swiper-wrapper">
-							<div class="swiper-slide">
-								<div class="stories__slide" title="Последнее">
-									<a href="index.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/Poslednee.png);"></div>
-										<div class="stories__slide-txt" style="">Последнее</div>
-									</a>
-								</div>
-							</div>
 							<div class="swiper-slide">
 								<div class="stories__slide" title="anishapo личное">
 									<a href="./tags/./anishapo-lichnoe.html">
@@ -143,9 +135,9 @@
 								<a href="./posts/./3-sostavlyayushchie-antivirusnogo-pitaniyaxxxxx.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1745</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1764</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83945124_616005175856295_8179209082800195144_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=kbKUcSvIMcIAX-FmRTk&oh=791a948e48849f2771f5c2d3639d9ae6&oe=5EB96CF0" alt="3 СОСТАВЛЯЮЩИЕ АНТИВИРУСНОГО ПИТАНИЯ 🌟😎">
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83945124_616005175856295_8179209082800195144_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=kbKUcSvIMcIAX-FmRTk&oh=58a52fab67a417da992bdda76853edbc&oe=5EE0F9F0" alt="3 СОСТАВЛЯЮЩИЕ АНТИВИРУСНОГО ПИТАНИЯ 🌟😎">
 									</div>
 									<div class="article-more__item-name" style="
 ">3 СОСТАВЛЯЮЩИЕ АНТИВИРУСНОГО ПИТАНИЯ 🌟😎</div>
@@ -153,29 +145,19 @@
 								<a href="./posts/./kak-podnyat--vitamin-d.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1290</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1320</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83717774_471281957085239_4997457921501008778_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=UWMD3fxPyw0AX_pXmtq&oh=6f87f8f2e38e068695b0da9e5a496159&oe=5ED53384" alt="КАК ПОДНЯТЬ ВИТАМИН Д?">
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83717774_471281957085239_4997457921501008778_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=hNzQ78K1aFgAX-eGCx1&oh=eeec57a7636ff6f45f6a3187019bc3de&oe=5ED53384" alt="КАК ПОДНЯТЬ ВИТАМИН Д?">
 									</div>
 									<div class="article-more__item-name" style="
 ">КАК ПОДНЯТЬ ВИТАМИН Д?</div>
 								</a>
-								<a href="./posts/./moya-istoriyaxxxxx-4.html" class="article-more__item">
-									<div class="article-more__item-pic">
-										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1273</span>
-										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84479771_492275551473563_593260692510337045_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=ux4OUB9bJKkAX8paO4O&oh=3d095c144d04db7fb09ce2cfca7b959a&oe=5ECF2ABD" alt="МОЯ ИСТОРИЯ ❤️🌱">
-									</div>
-									<div class="article-more__item-name" style="
-">МОЯ ИСТОРИЯ ❤️🌱</div>
-								</a>
 								<a href="./posts/./moya-istoriyaxxxxx-3.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1237</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1240</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83973399_2769495349805057_2802406441781033650_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=tn5Bv9WExS8AX-TDQ-w&oh=09a544419c5e1548ca1fef1a9c9079d4&oe=5ECFF794" alt="МОЯ ИСТОРИЯ ❤️🌱">
+										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83973399_2769495349805057_2802406441781033650_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=3A3QHLWjLqsAX99QpcA&oh=1afdb51091b747a169f175139d762a48&oe=5ECFF794" alt="МОЯ ИСТОРИЯ ❤️🌱">
 									</div>
 									<div class="article-more__item-name" style="
 ">МОЯ ИСТОРИЯ ❤️🌱</div>
@@ -183,39 +165,49 @@
 								<a href="./posts/./chto-zhe-bylo-s-moey-kozhey.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1218</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1228</span>
 										</div>
 										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82894121_180660543025179_420947889386109084_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=1dMO8YgJMo0AX8vcQF8&oh=f7d13153bdbd4ecf72d9dba8dc65a639&oe=5ED5E2D8" alt="ЧТО ЖЕ БЫЛО С МОЕЙ КОЖЕЙ?">
 									</div>
 									<div class="article-more__item-name" style="
 ">ЧТО ЖЕ БЫЛО С МОЕЙ КОЖЕЙ?</div>
 								</a>
+								<a href="./posts/./kak-spravit-sya-so-streptokokkom.html" class="article-more__item">
+									<div class="article-more__item-pic">
+										<div class="article-more__item-pic-blind">
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1218</span>
+										</div>
+										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82311532_123461142371708_3138488080440019216_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=108&_nc_ohc=4HC8D5AjkxwAX8dUVGO&oh=2d0fb08212a5cf013678923d52e285a3&oe=5ECB60A6" alt="КАК СПРАВИТЬСЯ СО СТРЕПТОКОККОМ">
+									</div>
+									<div class="article-more__item-name" style="
+">КАК СПРАВИТЬСЯ СО СТРЕПТОКОККОМ</div>
+								</a>
 								<a href="./posts/./moya-istoriya-xxxx.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1182</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1185</span>
 										</div>
 										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83895606_170136797582758_1380565600953447473_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&_nc_ohc=SBK4vi0Gr4MAX_wp9OG&oh=ad012845b2f7bcfb8df310238dab6df4&oe=5EC45AEC" alt="МОЯ ИСТОРИЯ ❤️🌱">
 									</div>
 									<div class="article-more__item-name" style="
 ">МОЯ ИСТОРИЯ ❤️🌱</div>
 								</a>
+								<a href="./posts/./superbakteriya-streptokokk.html" class="article-more__item">
+									<div class="article-more__item-pic">
+										<div class="article-more__item-pic-blind">
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1183</span>
+										</div>
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84508367_168215024620684_6685021234193444122_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=0A9chT2AqvQAX82rv6N&oh=142abcedd0c5482bdcf1cc03d6cb4fde&oe=5EC3F524" alt="СУПЕРБАКТЕРИЯ СТРЕПТОКОКК">
+									</div>
+									<div class="article-more__item-name" style="
+">СУПЕРБАКТЕРИЯ СТРЕПТОКОКК</div>
+								</a>
 								<a href="./posts/./moya-istoriyaxxxxx.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1154</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1162</span>
 										</div>
 										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/82894115_492068188178295_8586066112610881889_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=i6_zANDBeRUAX_D2EH_&oh=827114ca2af385610a46a88486d73ab5&oe=5EC543D7" alt="МОЯ ИСТОРИЯ ❤️🌱">
-									</div>
-									<div class="article-more__item-name" style="
-">МОЯ ИСТОРИЯ ❤️🌱</div>
-								</a>
-								<a href="./posts/./moya-istoriyaxxxxx-2.html" class="article-more__item">
-									<div class="article-more__item-pic">
-										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>1150</span>
-										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/83528892_613291186070275_731161388949015759_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=7YDpCOn-aNQAX8p7N5p&oh=13303d95bb79b001257a6d683d8c7255&oe=5EBC6599" alt="МОЯ ИСТОРИЯ ❤️🌱">
 									</div>
 									<div class="article-more__item-name" style="
 ">МОЯ ИСТОРИЯ ❤️🌱</div>
